crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_03.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_03.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def bar(x: int) -> str: ...
5 | @overload
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_03.py:5:1
  |
3 | @overload
4 | def bar(x: int) -> str: ...
5 | @overload
  | ^^^^^^^^^
6 | def bar(x: str) -> int: ...
7 | def bar(x: int | str) -> object:
  |
info: rule `typing-overload-used` was selected in the configuration file

error[invalid-overload-implementation]: Invalid overload implementation can lead to runtime errors.
 --> snippet_03.py:8:5
  |
6 | def bar(x: str) -> int: ...
7 | def bar(x: int | str) -> object:
8 |     return b""
  |     ^^^^^^^^^^
  |
info: This overload implementation is invalid as `Literal[b""]` is not assignable to any of the overload return types (`str`, `int`)
info: rule `invalid-overload-implementation` was selected in the configuration file
